--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <title>My profile</title>
 <style>
 #ne{color:green;font-size:50px;text-align:center;vertical-align:middle;height:100%;padding-top:300px;}
+
 #cont{font-family:arial;font-size:30px;text-align:right}
 #intr{font-size:30px;color:blue;text-align:center}
 #le{font-size:20px;color:red}
 </style>
+
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+
 </head>
 <body style="background-color:FF8C00">
 
