--- a/index.html
+++ b/index.html
@@ -1,42 +1,15 @@
 <html>
-
 <head>
     <title>My profile</title>
-    <style>
-        #ne {
-            color: green;
-            font-size: 50px;
-            text-align: center;
-            vertical-align: middle;
-            height: 100%;
-            padding-top: 300px;
-        }
-        #cont {
-            font-family: arial;
-            font-size: 30px;
-            text-align: right
-        }
-        #intr {
-            font-size: 30px;
-            color: blue;
-            text-align: center
-        }
-        #le {
-            font-size: 20px;
-            color: red
-        }
-    </style>
 </head>
-
-<body style="background-color:FF8C00">
-
+<body>
     <div id="ne">Nibedita Behera</div>
     <p id="cont">CONTACT</p>
-    <div style="background-color:00FA9A">
+    <div>
         <p id="intr">Well I am a 2nd yr CSE student from cet,bbsr.Born and brought up in talcher,I am an ardent foodie,travel freak and a happy go girl</p>
     </div>
     <p id="intr">-Interests</p>
-    <div style="background-color:00FA9A">
+    <div>
         <ul id="le">
             <li>Reading novels</li>
             <li>Exploring places</li>
@@ -44,11 +17,11 @@
         </ul>
     </div>
     <p id="intr">Ambitions</p>
-    <div style="background-color:00FA9A">
+    <div>
         <p id="le">Earning more and spending ransom is too mainstream.Life iz to enjoy and i have got a whole lot of plans to ensure it.Discovering places and meeting new people iz what i owe for the most</p>
     </div>
     <p id="intr">Job Experience</p>
-    <div style="background-color:00FA9A">
+    <div>
         <ul id="le">
             <li>Computer Analyst at BARC</li>
             <li>Intern at Microsoft India</li>
@@ -58,8 +31,5 @@
     <p id="intr">Achievements</p>
     <ul id="le">
         <li>Gold medalist at Google
-
-
 </body>
-
 </html>
