--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
 
 #cont{font-family:arial;font-size:30px;text-align:right}
 #intr{font-size:30px;color:blue;text-align:center}
-#le{font-size:20px;color:red}
+#le{font-size:20px;color:black}
+
 </style>
 
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
 </head>
-<body style="background-color:FF8C00">
+<body style="background-color: #ffddcc">
 
 <div id="ne">Nibedita Behera</div>
 <p id="cont">CONTACT</p>
-<div style="background-color:00FA9A">
-<p id="intr">Well I am a 2nd yr CSE student from cet,bbsr.Born and brought up in talcher,I am an ardent foodie,travel freak and a happy go girl</p>
+<div style="background-color: #ffcc66">
+<p id="intr">Well I am a 2nd year CSE student from cet,bbsr.Born and brought up in talcher,I am an ardent foodie,travel freak and a happy go girl</p>
 </div>
 <p id="intr">-Interests</p>
-<div style="background-color:00FA9A">
+<div style="background-color:#ffe6b3">
 <ul id="le">
 <li>Reading novels</li>
 <li>Exploring places</li>
@@ -28,11 +29,11 @@
 </ul>
 </div>
 <p id="intr">Ambitions</p>
-<div style="background-color:00FA9A">
-<p id="le">Earning more and spending ransom is too mainstream.Life iz to enjoy and i have got a whole lot of plans to ensure it.Discovering places and meeting new people iz what i owe for the most</p>
+<div style="background-color: #ffcc66">
+<p id="le" color="black">Earning more and spending random is too mainstream.Life id to enjoy and i have got a whole lot of plans to ensure it.Discovering places and meeting new people iz what i owe for the most</p>
 </div>
 <p id="intr">Job Experience</p>
-<div style="background-color:00FA9A">
+<div style="background-color:#ffe6b3">
 <ul id="le">
 <li>Computer Analyst at BARC</li>
 <li>Intern at Microsoft India</li>
