--- a/index.html
+++ b/index.html
@@ -1,4 +1,98 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <title>My Profile</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
+    <style>
+      .card-body{
+          padding: 50px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container-fluid" style="background-color:#D1C4E9;padding-bottom:20%">
+       <div class="row">
+          <nav class="navbar navbar-default" style="background-color:#673AB7">
+             <div class="navbar-header">
+                <a class="navbar-brand" href="#"><font color="#ffffff"><b>Nibedita Behera</b></font></a>
+             </div>
+          </nav>
+       </div>
+
+        <div class="row" style="margin-top:1%;margin-right:">
+          <div class="col col-lg-4 col-sm-offset-">
+            <div class="card" style="width: 25rem;">
+               <div class="card-body">
+                 <h4 class="card-title">About</h4>
+                 <p class="card-text">Well I am a 2nd year CSE student from CET, BBSR.Born and brought up in Talcher,I am an ardent foodie,travel freak and a happy go girl.</p>
+               </div>
+           </div>
+          </div>
+          <div class="col col-lg-4 col-sm-offset-">
+            <div class="card" style="width: 20rem;margin-left:10%">
+               <div class="card-body">
+                 <h4 class="card-title">Interests</h4>
+                 <p class="card-text">
+                   <ul id="le">
+                       <li>Reading novels</li>
+                       <li>Exploring places</li>
+                       <li>Writing</li>
+                   </ul>
+                 </p>
+               </div>
+           </div>
+          </div>
+          <div class="col col-lg-4 col-sm-offset-">
+            <div class="card" style="width: 25rem;">
+               <div class="card-body">
+                 <h4 class="card-title">Ambitions</h4>
+                 <p class="card-text">Life is to enjoy and I have got a whole lot of plans to ensure it. Discovering places and meeting new people is what i owe for the most.</p>
+               </div>
+           </div>
+          </div>
+        </div>
+
+        <div class="row" style="margin-top:1%;margin-right:">
+          <div class="col col-lg-4 col-sm-offset-2">
+            <div class="card" style="width: 25rem;">
+               <div class="card-body">
+                 <h4 class="card-title">Job Experience</h4>
+                 <p class="card-text">  <ul id="le">
+                       <li>Computer Analyst at BARC</li>
+                       <li>Intern at Microsoft India</li>
+                       <li>Senior software developer at Infosys</li>
+                   </ul></p>
+               </div>
+           </div>
+          </div>
+          <div class="col col-lg-4 col-sm-offset-">
+            <div class="card" style="width: 20rem;">
+               <div class="card-body">
+                 <h4 class="card-title">Achievements</h4>
+                 <p class="card-text"> <ul id="le">
+                       <li>Runners up in CNC hackathon</li>
+                       <li>First in tech quiz</li>
+                       <li>GHCI applicant</li>
+                   </ul></p>
+               </div>
+           </div>
+          </div>
+        </div>
+
+    </div>
+  </body>
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+</html>
+
+
+
+
+
+<!-- <html>
 
 <head>
     <title>My profile</title>
@@ -62,4 +156,4 @@
 
 </body>
 
-</html>
+</html> -->
