--- a/index.html
+++ b/index.html
@@ -2,30 +2,7 @@
 
 <head>
     <title>My profile</title>
-    <style>
-        #ne {
-            color: green;
-            font-size: 50px;
-            text-align: center;
-            vertical-align: middle;
-            height: 100%;
-            padding-top: 300px;
-        }
-        #cont {
-            font-family: arial;
-            font-size: 30px;
-            text-align: right
-        }
-        #intr {
-            font-size: 30px;
-            color: blue;
-            text-align: center
-        }
-        #le {
-            font-size: 20px;
-            color: red
-        }
-    </style>
+   <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
 <body style="background-color:FF8C00">
@@ -59,7 +36,7 @@
     <ul id="le">
         <li>Gold medalist at Google
 
-
+        </li></ul>
 </body>
 
 </html>
