index.html: Add image place.
Add image place on the right hand corner of the navigation bar.

Closes https://github.com/nibeditapooja/cetbbsr/issues/15

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
        <div class="row">
           <nav class="navbar navbar-default" style="background-color:#673AB7">
              <div class="navbar-header">
+		<img src = "#" alt = "#" align = "right">
                 <a class="navbar-brand" href="#"><font color="#ffffff"><b>Nibedita Behera</b></font></a>
              </div>
           </nav>
