--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
     <title>My Profile</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
-    <style>
-      .card-body{
-          padding: 50px;
-      }
-    </style>
-  </head>
+    <link rel="stylesheet" href="styles.css">
+</head>
   <body>
     <div class="container-fluid" style="background-color:#D1C4E9;padding-bottom:20%">
        <div class="row">
