addedindex_css.css

--- a/index.html
+++ b/index.html
@@ -5,25 +5,22 @@
     <title>My Profile</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
-    <style>
-      .card-body{
-          padding: 50px;
-      }
-    </style>
+    <link rel="stylesheet" type=text/css href="index_style.css">
   </head>
   <body>
-    <div class="container-fluid" style="background-color:#D1C4E9;padding-bottom:20%">
+        <div class="container-fluid" >
        <div class="row">
-          <nav class="navbar navbar-default" style="background-color:#673AB7">
+          <nav class="navbar navbar-default">
              <div class="navbar-header">
+		<img src = "" alt = "" align = "right">
                 <a class="navbar-brand" href="#"><font color="#ffffff"><b>Nibedita Behera</b></font></a>
              </div>
           </nav>
        </div>
 
-        <div class="row" style="margin-top:1%;margin-right:">
+        <div class="row">
           <div class="col col-lg-4 col-sm-offset-">
-            <div class="card" style="width: 25rem;">
+            <div class="card about">
                <div class="card-body">
                  <h4 class="card-title">About</h4>
                  <p class="card-text">Well I am a 2nd year CSE student from CET, BBSR.Born and brought up in Talcher,I am an ardent foodie,travel freak and a happy go girl.</p>
@@ -31,7 +28,7 @@
            </div>
           </div>
           <div class="col col-lg-4 col-sm-offset-">
-            <div class="card" style="width: 20rem;margin-left:10%">
+            <div class="card interest">
                <div class="card-body">
                  <h4 class="card-title">Interests</h4>
                  <p class="card-text">
@@ -45,21 +42,22 @@
            </div>
           </div>
           <div class="col col-lg-4 col-sm-offset-">
-            <div class="card" style="width: 25rem;">
+            <div class="card ambitions">
                <div class="card-body">
                  <h4 class="card-title">Ambitions</h4>
-                 <p class="card-text">Life is to enjoy and I have got a whole lot of plans to ensure it. Discovering places and meeting new people is what i owe for the most.</p>
+                 <p class="card-text">Life is to enjoy and I have got a whole lot of plans to ensure it. Discovering places and meeting new people is what I owe for the most.</p>
                </div>
            </div>
           </div>
         </div>
 
-        <div class="row" style="margin-top:1%;margin-right:">
+        <div class="row">
           <div class="col col-lg-4 col-sm-offset-2">
-            <div class="card" style="width: 25rem;">
+            <div class="card experience">
                <div class="card-body">
                  <h4 class="card-title">Job Experience</h4>
-                 <p class="card-text">  <ul id="le">
+                 <p class="card-text"> 
+                  <ul id="le">
                        <li>Computer Analyst at BARC</li>
                        <li>Intern at Microsoft India</li>
                        <li>Senior software developer at Infosys</li>
@@ -68,7 +66,7 @@
            </div>
           </div>
           <div class="col col-lg-4 col-sm-offset-">
-            <div class="card" style="width: 20rem;">
+            <div class="card acheivements">
                <div class="card-body">
                  <h4 class="card-title">Achievements</h4>
                  <p class="card-text"> <ul id="le">
@@ -90,70 +88,4 @@
 
 
 
-
-
-<!-- <html>
-
-<head>
-    <title>My profile</title>
-    <style>
-        #ne {
-            color: green;
-            font-size: 50px;
-            text-align: center;
-            vertical-align: middle;
-            height: 100%;
-            padding-top: 300px;
-        }
-        #cont {
-            font-family: arial;
-            font-size: 30px;
-            text-align: right
-        }
-        #intr {
-            font-size: 30px;
-            color: blue;
-            text-align: center
-        }
-        #le {
-            font-size: 20px;
-            color: red
-        }
-    </style>
-</head>
-
-<body style="background-color:FF8C00">
-
-    <div id="ne">Nibedita Behera</div>
-    <p id="cont">CONTACT</p>
-    <div style="background-color:00FA9A">
-        <p id="intr">Well I am a 2nd yr CSE student from cet,bbsr.Born and brought up in talcher,I am an ardent foodie,travel freak and a happy go girl</p>
-    </div>
-    <p id="intr">-Interests</p>
-    <div style="background-color:00FA9A">
-        <ul id="le">
-            <li>Reading novels</li>
-            <li>Exploring places</li>
-            <li>Writing</li>
-        </ul>
-    </div>
-    <p id="intr">Ambitions</p>
-    <div style="background-color:00FA9A">
-        <p id="le">Earning more and spending ransom is too mainstream.Life iz to enjoy and i have got a whole lot of plans to ensure it.Discovering places and meeting new people iz what i owe for the most</p>
-    </div>
-    <p id="intr">Job Experience</p>
-    <div style="background-color:00FA9A">
-        <ul id="le">
-            <li>Computer Analyst at BARC</li>
-            <li>Intern at Microsoft India</li>
-            <li>Senior software developer at Infosys</li>
-        </ul>
-    </div>
-    <p id="intr">Achievements</p>
-    <ul id="le">
-        <li>Gold medalist at Google
-
-
-</body>
-
-</html> -->
+	
